Fix linear-gradient bug on safari

--- a/components/must-read/must-read.less
+++ b/components/must-read/must-read.less
@@ -91,8 +91,8 @@
 	height: 100px;
 	margin-top: -100px;
 	background: 0 0;
-	background: -webkit-gradient(linear,left top,left bottom,from(transparent),to(white));
-	background: linear-gradient(transparent, white);
+	background: -webkit-gradient(linear,left top,left bottom,from(rgba(255,255,255,.001)),to(white));
+	background: linear-gradient(rgba(255,255,255,.001), white);
 	z-index: 2;
 	position: relative;
 
